<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AltaPedidosActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_titulo" />

    <TextView
        android:id="@+id/lblCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_correo" />

    <EditText
        android:id="@+id/edtPedidoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/lblModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_modo_entrega" />

    <RadioGroup
        android:id="@+id/optPedidoModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optPedidoRetirar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opt_retirar_en_local" />

        <RadioButton
            android:id="@+id/optPedidoEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opt_enviar_a_domicilio" />

    </RadioGroup>

    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_direccion" />

    <EditText
        android:id="@+id/edtPedidoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/lblHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_hora_entrega" />

    <EditText
        android:id="@+id/edtPedidoHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text='"00:00"' />

    <ListView
        android:id="@+id/lstPedidoItems"
        android:layout_width="match_parent"
        android:layout_height="170dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoAddProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_agregar_producto" />

        <Button
            android:id="@+id/btnPedidoQuitarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_quitar_producto" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTotalPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_total_del_pedido" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoHacerPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_hacer_pedido" />

        <Button
            android:id="@+id/btnPedidoVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_volver" />
    </LinearLayout>
</LinearLayout>